# malt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md  Doxyfile
dev/: gen_archive.py  packaging.sh  update_file_headers.json  update_version.py
doc/source/: conf.py  index.rst
doc/source/advanced/: packaging.rst
doc/source/start/: metrics.rst
examples/: CMakeLists.txt
examples/fortran/01-ifort-heap-arrays/: Makefile
examples/python/: Makefile
packaging/: README.md
packaging/archlinux/: PKGBUILD
packaging/debian/pkg/: changelog
packaging/fedora/: malt.spec
packaging/gentoo/dev-util/malt/: malt-1.6.0.ebuild
src/doc/developer/: file-format.md
src/libinstrum-rust/: Cargo.toml
src/libinstrum-rust/src/: main.rs
src/libinstrum-rust/src/caches/: associativ_cache.rs  (+1 more)
src/libinstrum/common/: Options.cpp  Options.hpp
src/libinstrum/core/: AllocTraceFormat.hpp  Trigger.cpp  Trigger.hpp
src/libinstrum/portability/: OSUnix.cpp  OSUnix.hpp
src/libinstrum/profiler/: AllocStackProfiler.cpp  AllocStackProfiler.hpp  LocalAllocStackProfiler.cpp
src/libinstrum/state/: FakeControler.c  GlobalState.cpp
src/libinstrum/tests/: TestValgrindOutput.cpp
src/libinstrum/tools/: Addr2Line.cpp
src/libinstrum/wrappers/: WrapperCAlloc.cpp  WrapperGpuAlloc.cpp
src/manpages/: malt-python.1  malt-python.1.html  malt-python.ronn  malt-webview.1  malt-webview.1.html  malt-webview.ronn  malt.1  malt.1.html  malt.ronn
src/reader/webview-2-cpp/: main_webview.cpp
src/webview/client-files/: build.sh  package-lock.json  package.json  prepare.sh  vite.config.ts
(+20 files in other folders)
